[tool.poetry]
name = "rl4nuts"
version = "0.1.0"
description = "RL4nuts is a bunch of RL artifacts and scripts for most common RL algorithms"
authors = ["Cristóbal Alcázar <alcazar.cristobal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
torch = "2.6.0"
tensorboard = "^2.19.0"
wandb = "^0.23.0"
tyro = "^0.9.0"
pyglet = "^1.5.19"
gymnasium = "^1.2.0"
box2d-py = "^2.3.5"
opencv-python = "^4.5.3"
pygame = "2.6.0"
moviepy = "^2.2.1"
ale_py = "^0.11.1"
ipykernel = "^7.1.0"

[poetry.group.dev.dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"